# gorai

./: .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE
airgap/: BUILD.bazel
block/: BUILD.bazel  account.go  account_test.go  amount.go  block.go  block_test.go  blockhash.go  blockhash_test.go  signature.go  signature_test.go  util.go  util_test.go  work.go  work_test.go
cmd/gorai-airgap/: BUILD.bazel
cmd/gorai-node/: BUILD.bazel  main.go
crypto/: hash.go  seed.go  signing.go  signing_test.go
